--- a/src/app.css
+++ b/src/app.css
@@ -33,7 +33,8 @@ html {
 }
 
 body {
-	@include flex(column);
+	display: flex;
+	flex-direction: column;
 	background: var(--bg);
 	color: var(--txt);
 	margin: 0;
@@ -76,7 +77,7 @@ code {
 	background: var(--bg-2);
 	padding: 0 0.3em;
 	font-size: 1rem;
-	// border-radius: 0.25rem;
+	/* border-radius: 0.25rem; */
 	font-variant-ligatures: no-contextual;
 	color: #cdd6f4;
 }
@@ -85,7 +86,7 @@ pre {
 	font-family: 'Space Mono', monospace;
 	background: var(--bg-2) !important;
 	padding: 0.75rem;
-	// border-radius: 0.5rem;
+	/* border-radius: 0.5rem; */
 	overflow-x: auto;
 	font-size: 1rem;
 	max-width: calc(100vw - 3rem);
@@ -228,6 +229,7 @@ figure {
 		text-decoration-color: var(--txt-3);
 		text-decoration-thickness: 2px;
 		transition: text-decoration-color 0.2s;
+
 		&:hover {
 			text-decoration-color: var(--txt);
 		}
