--- a/src/app.css
+++ b/src/app.css
@@ -53,15 +53,16 @@ h4 {
 	color: var(--txt-0);
 	line-height: 1.3;
 	font-variant-ligatures: no-common-ligatures;
+	letter-spacing: -2%;
 }
 
 h1 {
 	font-size: 3rem;
-	margin: 1rem 0 3rem 0;
+	margin: 1rem 0 2rem 0;
 }
 h2 {
 	font-size: 2rem;
-	margin: 3rem 0 1.5rem 0;
+	margin: 2.5rem 0 1.25rem 0;
 }
 h3 {
 	font-size: 1.4rem;
@@ -70,6 +71,10 @@ h3 {
 h4 {
 	font-size: 1.1rem;
 	margin: 1.5rem 0 1rem 0;
+}
+
+p {
+	margin: 1rem 0;
 }
 
 code {
@@ -193,6 +198,7 @@ a.link {
 		opacity: 0;
 		transform: translateX(-0.6em);
 		transition: 0.2s;
+		white-space: nowrap;
 	}
 	&:hover {
 		.arrow {
